--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
       <artifactId>commons-codec</artifactId>
       <version>1.12</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk</artifactId>
+      <version>1.12.523</version>
+    </dependency>
+
   </dependencies>
 
   <build>
