chat room using websocket and create dto layer

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
       <version>1.12.523</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
