--- a/mvc/pom.xml
+++ b/mvc/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>java_talking_app</name>
+  <name>mvc</name>
   <url>http://maven.apache.org</url>
 
   <properties>
