--- a/mvc/src/main/resources/application.properties
+++ b/mvc/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 #
 ##server.address=0.0.0.0
 #
-spring.datasource.url=jdbc:postgresql://localhost:5430/talking_db
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=admin
-spring.datasource.password=Training123!
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.show-sql=true
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
